--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Rs</title>
+    <title>Rocketsled</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
 
-    <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/rs.css">
+    <link rel="stylesheet" href="assets/vendor.css">
 
     {{content-for 'head-footer'}}
   </head>
@@ -21,5 +21,6 @@
     <script src="assets/rs.js"></script>
 
     {{content-for 'body-footer'}}
+
   </body>
 </html>
